started adding User Class

--- a/views/add_property.html
+++ b/views/add_property.html
@@ -7,7 +7,7 @@
 
 <body>
   <center><div>
-    <textarea id="new_listing_textbox" rows="4" cols="50" placeholder="Please enter listing name..."></textarea>
+    <textarea id="new_listing_textbox" rows="4" cols="50" placeholder="Please enter property name..."></textarea>
     <button id="new_listing_button" class="new_listing_button">Post New Listing</button>
   </div>
   <br>
@@ -18,6 +18,6 @@
 
 </html>
 
-<script src="public/src/property.js"></script>
-<script src="node_modules/jquery/dist/jquery.js"></script>
-<script src="public/src/property_interface.js"></script>
+<script src="../public/src/property.js"></script>
+<script src="../node_modules/jquery/dist/jquery.js"></script>
+<script src="../public/src/property_interface.js"></script>
