logged in user method

--- a/views/sign_up.html
+++ b/views/sign_up.html
@@ -2,16 +2,16 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="public/styles/index.css">
+  <link rel="stylesheet" type="text/css" href="../public/styles/index.css">
 </head>
 
 <body>
   <center><div>
-    <textarea id="new_username_textbox" rows="1" cols="20" placeholder="Please enter username..."></textarea><br>
-    <textarea id="new_password_textbox" rows="1" cols="20" placeholder="Please enter password..."></textarea><br>
-    <textarea id="new_firstname_textbox" rows="1" cols="20" placeholder="Please enter first name..."></textarea><br>
-    <textarea id="new_surname_textbox" rows="1" cols="20" placeholder="Please enter surname..."></textarea><br>
-    <textarea id="new_email_textbox" rows="1" cols="20" placeholder="Please enter email..."></textarea><br>
+    <input type="text" id="new_username_textbox" placeholder="Please enter username..."></><br>
+    <input type="password" id="new_password_textbox" placeholder="Please enter password..."></textarea><br>
+    <input type="text" id="new_firstname_textbox" placeholder="Please enter first name..."></textarea><br>
+    <input type="text" id="new_surname_textbox" placeholder="Please enter surname..."></textarea><br>
+    <input type="text" id="new_email_textbox" placeholder="Please enter email..."></textarea><br>
     <button id="new_user_button" class="new_listing_button">Sign Up</button>
   </div>
   <br>
