price and description added to the property

--- a/views/property/add_property.html
+++ b/views/property/add_property.html
@@ -7,7 +7,9 @@
 
 <body>
   <center><div>
-    <textarea id="new_listing_textbox" rows="4" cols="50" placeholder="Please enter property name..."></textarea>
+    <input type='text' id="new_listing_textbox" placeholder="Please enter property name..."></input><br>
+    <textarea id="new_listing_description" rows="4" cols="50" placeholder="Please enter a description about your property name..."></textarea><br>
+    <input type='text' id="new_listing_price" placeholder="Cost per night"></input><br>
     <button id="new_listing_button" class="new_listing_button">Post New Listing</button>
   </div>
   <br>
