--- a/views/index.html
+++ b/views/index.html
@@ -2,17 +2,18 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="../../public/styles/index.css">
+  <link rel="stylesheet" type="text/css" href="../public/styles/index.css">
 </head>
 
 <body>
   <center><div>
-<h2>Welcome to Cambri.... We mean MakersB'n'B</h2>
+<h2>Welcome to Cambri.... We mean Makers B'n'B</h2>
     <button id="login_button" class="new_listing_button">Log In</button>
     <button id="signup_button" class="new_listing_button">Sign Up</button>
   </div>
   <br>
 </body>
+
 
 
 </html>
