--- a/views/property/add_property.html
+++ b/views/property/add_property.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+<script src="../../public/src/moment-with-locales.min.js"></script>
+<script src="../../public/src/lightpick.js"></script>
+
 <head>
+  <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="../../public/styles/index.css">
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 </head>
 
 <body>
@@ -15,7 +15,7 @@
       <input type='text' id="new_listing_textbox" placeholder="Please enter property name..."></input><br>
       <textarea id="new_listing_description" rows="4" cols="50" placeholder="Please enter a description about your property..."></textarea><br>
       <input type='text' id="new_listing_price" placeholder="Cost per night"></input><br>
-      Please enter dates available: <br><input type="text" id="new_listing_date_range" name="daterange" value="07/30/2019 - 07/30/2019" /><br>
+      Please enter dates available: <br><input type="text" id="datepicker"><br>
       <button id="new_listing_button" class="new_listing_button">Post New Listing</button>
     </div>
     <br>
@@ -29,7 +29,9 @@
 <script src="../../public/src/user.js"></script>
 <!-- <script src="../../node_modules/jquery/dist/jquery.js"></script> -->
 <script src="../../public/src/property_interface.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+<script>const myPicker = new Lightpick({
+      field : document.getElementById('datepicker'),
+      singleDate : false
+
+});
+</script>
