server not working

--- a/views/user/new.html
+++ b/views/user/new.html
@@ -8,10 +8,10 @@
 <body>
   <center><div>
     <input type="text" id="new_username_textbox" placeholder="Please enter username..."></><br>
-    <input type="password" id="new_password_textbox" placeholder="Please enter password..."></textarea><br>
-    <input type="text" id="new_firstname_textbox" placeholder="Please enter first name..."></textarea><br>
-    <input type="text" id="new_surname_textbox" placeholder="Please enter surname..."></textarea><br>
-    <input type="text" id="new_email_textbox" placeholder="Please enter email..."></textarea><br>
+    <input type="password" id="new_password_textbox" placeholder="Please enter password..."><br>
+    <input type="text" id="new_firstname_textbox" placeholder="Please enter first name..."><br>
+    <input type="text" id="new_surname_textbox" placeholder="Please enter surname..."><br>
+    <input type="text" id="new_email_textbox" placeholder="Please enter email..."><br>
     <button id="new_user_button" class="new_listing_button">Sign Up</button>
   </div>
   <br>
