got testing working

--- a/views/property/new.html
+++ b/views/property/new.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <center>
+  <center>  Welcome
     <div>
       <input type='text' id="new_listing_name" placeholder="Please enter property name..."></input><br>
       <textarea id="new_listing_description" rows="4" cols="50" placeholder="Please enter a description about your property..."></textarea><br>
