--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="../public/styles/index.css">
+  <link rel="stylesheet" type="text/css" href="/styles/index.css">
 </head>
 
 <body>
@@ -20,8 +20,3 @@
 
 
 </html>
-
-<script src="../public/src/property.js"></script>
-<script src="../public/src/user.js"></script>
-<script src="../node_modules/jquery/dist/jquery.js"></script>
-<script src="../public/src/index_interface.js"></script>
