--- a/views/user/new.html
+++ b/views/user/new.html
@@ -6,15 +6,16 @@
 </head>
 
 <body>
-  <center><div>
-    <input type="text" id="new_username_textbox" placeholder="Please enter username..."></><br>
-    <input type="password" id="new_password_textbox" placeholder="Please enter password..."><br>
-    <input type="text" id="new_firstname_textbox" placeholder="Please enter first name..."><br>
-    <input type="text" id="new_surname_textbox" placeholder="Please enter surname..."><br>
-    <input type="text" id="new_email_textbox" placeholder="Please enter email..."><br>
-    <button id="new_user_button" class="new_listing_button">Sign Up</button>
-  </div>
-  <br>
+  <center>
+    <div>
+      <input type="text" id="new_username_textbox" name="username" placeholder="Please enter username..."></><br>
+      <input type="password" id="new_password_textbox" name="password" placeholder="Please enter password..."><br>
+      <input type="text" id="new_firstname_textbox" name="first_name" placeholder="Please enter first name..."><br>
+      <input type="text" id="new_surname_textbox" name="surname" placeholder="Please enter surname..."><br>
+      <input type="text" id="new_email_textbox" name="email" placeholder="Please enter email..."><br>
+      <button id="new_user_button" class="new_listing_button">Sign Up</button>
+    </div>
+    <br>
 </body>
 
 
