fiddling with capybara

--- a/views/property/new.html
+++ b/views/property/new.html
@@ -9,7 +9,7 @@
 <body>
   <center>  Welcome
     <div>
-      <input type='text' id="new_listing_name" placeholder="Please enter property name..."></input><br>
+      <input type='text' id="new_listing_name" name="name" placeholder="Please enter property name..."></input><br>
       <textarea id="new_listing_description" rows="4" cols="50" placeholder="Please enter a description about your property..."></textarea><br>
       <input type='text' id="new_listing_price" placeholder="Cost per night"></input><br>
       Please enter dates available: <br><input type="text" id="datepicker"><br>
