--- a/views/user/new.html
+++ b/views/user/new.html
@@ -13,7 +13,7 @@
       <input type="text" id="new_firstname_textbox" name="first_name" placeholder="Please enter first name..."><br>
       <input type="text" id="new_surname_textbox" name="surname" placeholder="Please enter surname..."><br>
       <input type="text" id="new_email_textbox" name="email" placeholder="Please enter email..."><br>
-      <button id="new_user_button" class="new_listing_button">Sign Up</button>
+      <button id="new_user_button" name="sign_up" class="new_listing_button">Sign Up</button>
     </div>
     <br>
 </body>
