style update for cambridge

--- a/views/index.html
+++ b/views/index.html
@@ -3,16 +3,42 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="/styles/index.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
+<style>
+  .btnWidth {
+    width: 8rem;
+  }
+
+  .fontAv {
+    font-family: Avenir;
+  }
+
+</style>
 
 <body>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand fontAv" href="#">Makers B'n'B</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li class="active fontAv"><a href="#">Home</a></li>
+      </ul>
+    </div>
+  </nav>
   <center><div>
-<h2>Welcome to Cambri.... We mean Makers B'n'B</h2>
+<h2 class="fontAv">Welcome to Cambri.... We mean Makers B'n'B</h2>
+<br>
+<br>
 <form action="/user/login/" method="get" >
-    <button id="login_button" class="new_listing_button">Log In</button>
+    <button id="login_button" class="new_listing_button btn btn-default btnWidth fontAv">Log In</button>
   </form>
+  <br>
   <form action="/user/new/" method="get" >
-    <button class="new_listing_button">Sign Up</button></form>
+    <button class="new_listing_button btn btn-default btnWidth fontAv">Sign Up</button></form>
   </div>
   <br>
 </body>
