--- a/views/property/new.html
+++ b/views/property/new.html
@@ -4,16 +4,53 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="/styles/index.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 
-<body>
-  <center>  Welcome
+<style>
+    .btnWidth {
+      width: 8rem;
+    }
+  
+    .fontAv {
+      font-family: Avenir;
+    }
+
+    .form-control{
+      width: 25rem;
+    }
+
+    .bottom {
+      margin-bottom: 30px;
+    }
+
+    .zero {
+      margin: 0;
+    }
+  
+  </style>
+
+<body class="fontAv">
+  <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand fontAv" href="#">Makers B'n'B</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active fontAv"><a href="/">Home</a></li>
+        </ul>
+      </div>
+    </nav>
+  <center>  <h3 class="bottom">Welcome</h3>
     <div>
-      <input type='text' id="new_listing_name" name="name" placeholder="Please enter property name..."></input><br>
-      <textarea id="new_listing_description" rows="4" cols="50" placeholder="Please enter a description about your property..."></textarea><br>
-      <input type='text' id="new_listing_price" placeholder="Cost per night"></input><br>
-      Please enter dates available: <br><input type="text" id="datepicker"><br>
-      <button id="new_listing_button" class="new_listing_button">Post New Listing</button>
+      <input type='text' id="new_listing_name" name="name" placeholder="Please enter property name..." class="form-control"></input><br>
+      <textarea id="new_listing_description" rows="4" cols="50" placeholder="Please enter a description about your property..." class="form-control"></textarea><br>
+      <input type='text' id="new_listing_price" placeholder="Cost per night" class="form-control"></input><br>
+      <h5 class="zero">Please enter dates available:</h5> <br><input type="text" id="datepicker" class="form-control"><br>
+      <br>
+      <button id="new_listing_button" class="new_listing_button btn btn-primary active">Post New Listing</button>
     </div>
     <br>
     <table id="listings_table">
