added username to new property page

--- a/views/property/new.html
+++ b/views/property/new.html
@@ -13,7 +13,7 @@
     .btnWidth {
       width: 8rem;
     }
-  
+
     .fontAv {
       font-family: Avenir;
     }
@@ -29,7 +29,7 @@
     .zero {
       margin: 0;
     }
-  
+
   </style>
 
 <body class="fontAv">
@@ -43,7 +43,7 @@
         </ul>
       </div>
     </nav>
-  <center>  <h3 class="bottom">Welcome</h3>
+  <center>  <h3 class="bottom">Welcome <span id="logged_in_username"></span>!</h3>
     <div>
       <input type='text' id="new_listing_name" name="name" placeholder="Please enter property name..." class="form-control"></input><br>
       <textarea id="new_listing_description" rows="4" cols="50" placeholder="Please enter a description about your property..." class="form-control"></textarea><br>
