"true" instead of true

--- a/views/index.html
+++ b/views/index.html
@@ -8,10 +8,12 @@
 <body>
   <center><div>
 <h2>Welcome to Cambri.... We mean Makers B'n'B</h2>
+  <form action="/user/login/" method="get" >
      <button id="login_button" class="new_listing_button">Log In</button>
   </form>
   <form action="/user/new/" method="get" >
-    <button class="new_listing_button">Sign Up</button></form>
+    <button class="new_listing_button">Sign Up</button>
+  </form>
   </div>
   <br>
 </body>
