--- a/views/user/login.html
+++ b/views/user/login.html
@@ -10,6 +10,7 @@
     <input type="text" id="username_textbox" placeholder="Please enter username..."></><br>
     <input type="password" id="password_textbox" placeholder="Please enter password..."></textarea><br>
     <button id="login_button" class="new_listing_button">Log In</button>
+    <p id='incorrect_password'> </p>
   </div>
   <br>
 </body>
@@ -17,7 +18,8 @@
 
 </html>
 
-<script src="../../public/src/property.js"></script>
-<script src="../../public/src/user.js"></script>
-<script src="../../node_modules/jquery/dist/jquery.js"></script>
-<script src="../../public/src/property_interface.js"></script>
+<!-- <script src="/src/property.js"></script> -->
+<script src="/node_modules/jquery/dist/jquery.js"></script>
+<script src="/src/user.js"></script>
+<script src="/src/user_login_interface.js"></script>
+<!-- <script src="/src/property_interface.js"></script> -->
