style updated, stored css into styles folder

--- a/views/property/new.html
+++ b/views/property/new.html
@@ -3,34 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="/styles/index.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="/styles/style.css"/>
 </head>
-
-<style>
-    .btnWidth {
-      width: 8rem;
-    }
-
-    .fontAv {
-      font-family: Avenir;
-    }
-
-    .form-control{
-      width: 25rem;
-    }
-
-    .bottom {
-      margin-bottom: 30px;
-    }
-
-    .zero {
-      margin: 0;
-    }
-
-  </style>
 
 <body class="fontAv">
   <nav class="navbar navbar-default">
