style changes finished

--- a/views/index.html
+++ b/views/index.html
@@ -32,6 +32,16 @@
     <button class="new_listing_button btn btn-default btnWidth fontAv">Sign Up</button></form>
   </div>
   <br>
+
+  <footer class="page-footer font-small blue top">
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2018 Copyright
+      <a href="#"> Cambridge Analytica</a>
+    </div>
+    <!-- Copyright -->
+  
+  </footer>
 </body>
 
 
