--- a/views/property/new.html
+++ b/views/property/new.html
@@ -32,6 +32,15 @@
     <br>
     <table id="listings_table">
     </table>
+    <footer class="page-footer font-small blue top">
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2018 Copyright
+          <a href="#"> Cambridge Analytica</a>
+        </div>
+        <!-- Copyright -->
+      
+      </footer>
 </body>
 
 </html>
