--- a/views/user/login.html
+++ b/views/user/login.html
@@ -29,6 +29,17 @@
     <button id="login_button" class="new_listing_button btn btn-primary active btnWidth fontAv">Log In</button>
   </div>
   <br>
+
+
+  <footer class="page-footer font-small blue top">
+
+      <!-- Copyright -->
+      <div class="footer-copyright text-center py-3">© 2018 Copyright
+        <a href="#"> Cambridge Analytica</a>
+      </div>
+      <!-- Copyright -->
+    
+    </footer>
 </body>
 
 
