--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -14,6 +14,14 @@
   margin-bottom: 30px;
 }
 
+.top {
+  margin-top: 40rem;
+}
+
+.page-footer {
+  margin-top: 40rem;
+}
+
 .zero {
   margin: 0;
 }
