--- a/views/user/new.html
+++ b/views/user/new.html
@@ -33,6 +33,16 @@
       <button id="new_user_button" name="sign_up" class="new_listing_button btn btn-primary active btnWidth fontAv">Sign Up</button>
     </div>
     <br>
+
+    <footer class="page-footer font-small blue top">
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2018 Copyright
+          <a href="#"> Cambridge Analytica</a>
+        </div>
+        <!-- Copyright -->
+      
+      </footer>
 </body>
 
 
