spacing update for footer

--- a/views/property/new.html
+++ b/views/property/new.html
@@ -32,7 +32,7 @@
     <br>
     <table id="listings_table">
     </table>
-    <footer class="page-footer font-small blue top">
+    <footer class="page-footer font-small blue top page-bottom">
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2018 Copyright
