--- a/views/user/new.html
+++ b/views/user/new.html
@@ -34,7 +34,7 @@
     </div>
     <br>
 
-    <footer class="page-footer font-small blue top">
+    <footer class="page-footer font-small blue page-bottom">
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2018 Copyright
