--- a/views/user/login.html
+++ b/views/user/login.html
@@ -31,7 +31,7 @@
   <br>
 
 
-  <footer class="page-footer font-small blue top">
+  <footer class="page-footer font-small blue top page-bottom">
 
       <!-- Copyright -->
       <div class="footer-copyright text-center py-3">© 2018 Copyright
