add log out button

--- a/views/property/new.html
+++ b/views/property/new.html
@@ -17,6 +17,7 @@
         </div>
         <ul class="nav navbar-nav">
           <li class="active fontAv"><a href="/">Home</a></li>
+          <li class="active fontAv"><a id="log_out_link" href="/">Log Out</a></li>
         </ul>
       </div>
     </nav>
@@ -39,7 +40,7 @@
           <a href="#"> Cambridge Analytica</a>
         </div>
         <!-- Copyright -->
-      
+
       </footer>
 </body>
 
