half finished booking

--- a/views/property/new.html
+++ b/views/property/new.html
@@ -47,6 +47,7 @@
 </html>
 
 <script src="/src/property.js"></script>
+<script src="/src/booking.js"></script>
 <script src="/src/user.js"></script>
 <script src="/node_modules/jquery/dist/jquery.js"></script>
 <script src="/src/property_interface.js"></script>
