--- a/views/property/new.html
+++ b/views/property/new.html
@@ -7,6 +7,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="/styles/style.css"/>
+  <script src="/src/property.js"></script>
+  <script src="/src/booking.js"></script>
+  <script src="/src/user.js"></script>
+  <script src="/node_modules/jquery/dist/jquery.js"></script>
+  <script src="/src/property_interface.js"></script>
 </head>
 
 <body class="fontAv">
@@ -17,6 +22,7 @@
         </div>
         <ul class="nav navbar-nav">
           <li class="active fontAv"><a href="/">Home</a></li>
+          <li class="active fontAv"><a id="view_bookings" href="/booking/all/">View Bookings</a></li>
           <li class="active fontAv"><a id="log_out_link" href="/">Log Out</a></li>
         </ul>
       </div>
@@ -45,9 +51,3 @@
 </body>
 
 </html>
-
-<script src="/src/property.js"></script>
-<script src="/src/booking.js"></script>
-<script src="/src/user.js"></script>
-<script src="/node_modules/jquery/dist/jquery.js"></script>
-<script src="/src/property_interface.js"></script>
