--- a/views/index.html
+++ b/views/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="/styles/bootstrap.min.css">
+  <script src="/styles/jquery.min.js"></script>
+  <script src="/styles/bootstrap.min.js"></script>
   <link rel="stylesheet" href="/styles/style.css"/>
 </head>
 
@@ -31,8 +31,7 @@
     <button class="new_listing_button btn btn-default btnWidth fontAv">Sign Up</button></form>
   </div>
   <br>
-
-  <footer class="page-footer font-small blue top page-bottom">
+    <footer class="page-footer font-small blue top page-bottom">
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2018 Copyright
