--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -30,81 +30,51 @@
   margin: 0;
 }
 
-body {
- background-image: url("../../images/maxresdefault.jpg");
- background-color: #cccccc;
+.checkmark__circle {
+  stroke-dasharray: 166;
+  stroke-dashoffset: 166;
+  stroke-width: 2;
+  stroke-miterlimit: 10;
+  stroke: #7ac142;
+  fill: none;
+  animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
 }
 
-svg {
-  width: 100px;
+.checkmark {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
   display: block;
-  margin: 40px auto 0;
+  stroke-width: 2;
+  stroke: #fff;
+  stroke-miterlimit: 10;
+  margin: 10% auto;
+  box-shadow: inset 0px 0px 0px #7ac142;
+  animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
 }
 
-.path {
-  stroke-dasharray: 1000;
-  stroke-dashoffset: 0;
-  &.circle {
-    -webkit-animation: dash .9s ease-in-out;
-    animation: dash .9s ease-in-out;
-  }
-  &.line {
-    stroke-dashoffset: 1000;
-    -webkit-animation: dash .9s .35s ease-in-out forwards;
-    animation: dash .9s .35s ease-in-out forwards;
-  }
-  &.check {
-    stroke-dashoffset: -100;
-    -webkit-animation: dash-check .9s .35s ease-in-out forwards;
-    animation: dash-check .9s .35s ease-in-out forwards;
-  }
+.checkmark__check {
+  transform-origin: 50% 50%;
+  stroke-dasharray: 48;
+  stroke-dashoffset: 48;
+  animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
 }
 
-p {
-  text-align: center;
-  margin: 20px 0 60px;
-  font-size: 1.25em;
-  &.success {
-    color: #73AF55;
-  }
-  &.error {
-    color: #D06079;
-  }
-}
-
-
-@-webkit-keyframes dash {
-  0% {
-    stroke-dashoffset: 1000;
-  }
+@keyframes stroke {
   100% {
     stroke-dashoffset: 0;
   }
 }
-
-@keyframes dash {
-  0% {
-    stroke-dashoffset: 1000;
+@keyframes scale {
+  0%, 100% {
+    transform: none;
   }
-  100% {
-    stroke-dashoffset: 0;
-  }
-}
-
-@-webkit-keyframes dash-check {
-  0% {
-    stroke-dashoffset: -100;
-  }
-  100% {
-    stroke-dashoffset: 900;
+  50% {
+    transform: scale3d(1.1, 1.1, 1);
   }
 }
-
-@keyframes dash-check {
-  0% {
-    stroke-dashoffset: -100;
-  }
+@keyframes fill {
   100% {
-    stroke-dashoffset: 900;
+    box-shadow: inset 0px 0px 0px 30px #7ac142;
   }
 }
