--- a/views/property/new.html
+++ b/views/property/new.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="/styles/bootstrap.min.css">
+  <script src="/styles/jquery.min.js"></script>
+  <script src="/styles/bootstrap.min.js"></script>
   <link rel="stylesheet" href="/styles/style.css"/>
   <script src="/src/property.js"></script>
   <script src="/src/booking.js"></script>
@@ -28,7 +28,7 @@
       </div>
     </nav>
   <center>  <h3 class="bottom">Welcome <span id="logged_in_username"></span>!</h3>
-    <div>
+    <div id='new_listing_table'>
       <input type='text' id="new_listing_name" name="name" placeholder="Please enter property name..." class="form-control"></input><br>
       <textarea id="new_listing_description" rows="4" cols="50" placeholder="Please enter a description about your property..." class="form-control"></textarea><br>
       <input type='text' id="new_listing_price" placeholder="Cost per night" class="form-control"></input><br>
