--- a/views/property/new.html
+++ b/views/property/new.html
@@ -28,17 +28,20 @@
       </div>
     </nav>
   <center>  <h3 class="bottom">Welcome <span id="logged_in_username"></span>!</h3>
-    <div id='new_listing_table'>
-      <input type='text' id="new_listing_name" name="name" placeholder="Please enter property name..." class="form-control"></input><br>
-      <textarea id="new_listing_description" rows="4" cols="50" placeholder="Please enter a description about your property..." class="form-control"></textarea><br>
-      <input type='text' id="new_listing_price" placeholder="Cost per night" class="form-control"></input><br>
-      <h5 class="zero">Please enter dates available:</h5> <br><input type="text" id="datepicker" class="form-control"><br>
-      <br>
-      <button id="new_listing_button" class="new_listing_button btn btn-primary active">Post New Listing</button>
-    </div>
-    <br>
-    <table id="listings_table">
-    </table>
+    <div class="inliner">
+     <div id='new_listing_table'>
+       <input type='text' id="new_listing_name" name="name" placeholder="Please enter property name..." class="form-control"></input><br>
+       <textarea id="new_listing_description" rows="4" cols="50" placeholder="Please enter a description about your property..." class="form-control"></textarea><br>
+       <input type='text' id="new_listing_price" placeholder="Cost per night" class="form-control"></input><br>
+       <h5 class="zero">Please enter dates available:</h5> <br><input type="text" id="datepicker" class="form-control"><br>
+       <br>
+       <button id="new_listing_button" class="new_listing_button btn btn-primary active">Post New Listing</button>
+       <button id="view_properties_button" class="new_listing_button btn btn-primary active">View Properties</button>
+     </div>
+   <br>
+   <table id="listings_table">
+   </table>
+ </div>
     <footer class="page-footer font-small blue top page-bottom">
 
         <!-- Copyright -->
