--- a/views/properties/view_all.html
+++ b/views/properties/view_all.html
@@ -10,8 +10,36 @@
   <link rel="stylesheet" href="/styles/style.css"/>
 </head>
 
+<body class="fontAv">
+  <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand fontAv" href="#">Makers B'n'B</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active fontAv"><a href="/">Home</a></li>
+          <li class="active fontAv"><a id="log_out_link" href="/">Log Out</a></li>
+        </ul>
+      </div>
+    </nav>
+  <center>  <h3 class="bottom">Where would you like to conquer next <span id="logged_in_username"></span>?</h3>
+
 <p> hello world </p>
 
+<center><table id="listings_table">
+</table>
+
+</html>
+
+<footer class="page-footer font-small blue top page-bottom">
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2018 Copyright
+      <a href="#"> Cambridge Analytica</a>
+    </div>
+    <!-- Copyright -->
+
+  </footer>
 
 
 <script src="/src/property.js"></script>
