--- a/views/booking/all.html
+++ b/views/booking/all.html
@@ -22,7 +22,7 @@
         </div>
         <ul class="nav navbar-nav">
           <li class="active fontAv"><a href="/">Home</a></li>
-          <li class="active fontAv"><a id="view_bookings" href="/booking/all/">View Bookings</a></li>
+          <li class="active fontAv"><a id="view_bookings" href="/property/new/">Add New Property</a></li>
           <li class="active fontAv"><a id="log_out_link" href="/">Log Out</a></li>
         </ul>
       </div>
