--- a/views/property/new.html
+++ b/views/property/new.html
@@ -28,8 +28,8 @@
       </div>
     </nav>
   <center>  <h3 class="bottom">Welcome <span id="logged_in_username"></span>!</h3>
-    <div class="inliner">
-     <div id='new_listing_table'>
+
+     <div id='new_listing_table' class="inliner" style='position: absolute'>
        <input type='text' id="new_listing_name" name="name" placeholder="Please enter property name..." class="form-control"></input><br>
        <textarea id="new_listing_description" rows="4" cols="50" placeholder="Please enter a description about your property..." class="form-control"></textarea><br>
        <input type='text' id="new_listing_price" placeholder="Cost per night" class="form-control"></input><br>
@@ -38,11 +38,12 @@
        <button id="new_listing_button" class="new_listing_button btn btn-primary active">Post New Listing</button>
        <button id="view_properties_button" class="new_listing_button btn btn-primary active">View Properties</button>
      </div>
-   <br>
+   <br><div  class="inliner" style='position: absolute'>
    <table id="listings_table">
    </table>
- </div>
-    <footer class="page-footer font-small blue top page-bottom">
+   </div>
+ <footer style='position: absolute; bottom: 10px; left: 50%;' class="page-footer font-small blue top page-bottom">
+
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2018 Copyright
