got everything working together

--- a/views/booking/all.html
+++ b/views/booking/all.html
@@ -11,6 +11,7 @@
   <script src="/src/booking.js"></script>
   <script src="/src/user.js"></script>
   <script src="/node_modules/jquery/dist/jquery.js"></script>
+  <script src="/src/property_interface.js"></script>
   <script src="/src/bookings_interface.js"></script>
 </head>
 
@@ -23,6 +24,7 @@
         <ul class="nav navbar-nav">
           <li class="active fontAv"><a href="/">Home</a></li>
           <li class="active fontAv"><a id="view_bookings" href="/property/new/">Add New Property</a></li>
+          <li class="active fontAv"><a id="view_bookings" href="/properties/view_all/">View Properties</a></li>
           <li class="active fontAv"><a id="log_out_link" href="/">Log Out</a></li>
         </ul>
       </div>
