--- a/views/property/new.html
+++ b/views/property/new.html
@@ -22,6 +22,7 @@
         </div>
         <ul class="nav navbar-nav">
           <li class="active fontAv"><a href="/">Home</a></li>
+          <li class="active fontAv"><a id="view_bookings" href="/properties/view_all/">View Properties</a></li>
           <li class="active fontAv"><a id="view_bookings" href="/booking/all/">View Bookings</a></li>
           <li class="active fontAv"><a id="log_out_link" href="/">Log Out</a></li>
         </ul>
@@ -39,8 +40,7 @@
        <button id="view_properties_button" class="new_listing_button btn btn-primary active">View Properties</button>
      </div>
    <br><div  class="inliner" style='position: absolute'>
-   <table id="listings_table">
-   </table>
+     <div id='listings_div'></div>
    </div>
  <footer style='position: absolute; bottom: 10px; left: 50%;' class="page-footer font-small blue top page-bottom">
 
