--- a/views/properties/view_all.html
+++ b/views/properties/view_all.html
@@ -4,10 +4,15 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="/styles/bootstrap.min.css">
+  <script src="/styles/jquery.min.js"></script>
+  <script src="/styles/bootstrap.min.js"></script>
   <link rel="stylesheet" href="/styles/style.css"/>
+  <script src="/src/property.js"></script>
+  <script src="/src/booking.js"></script>
+  <script src="/src/user.js"></script>
+  <script src="/node_modules/jquery/dist/jquery.js"></script>
+  <script src="/src/properties_interface.js"></script>
 </head>
 
 <body class="fontAv">
@@ -18,13 +23,14 @@
         </div>
         <ul class="nav navbar-nav">
           <li class="active fontAv"><a href="/">Home</a></li>
+          <li class="active fontAv"><a id="view_bookings" href="/property/new/">Add New Property</a></li>
+                    <li class="active fontAv"><a id="view_bookings" href="/properties/view_all/">View Properties</a></li>
+          <li class="active fontAv"><a id="view_bookings" href="/booking/all/">View Bookings</a></li>
           <li class="active fontAv"><a id="log_out_link" href="/">Log Out</a></li>
         </ul>
       </div>
     </nav>
   <center>  <h3 class="bottom">Where would you like to conquer next <span id="logged_in_username"></span>?</h3>
-
-<p> hello world </p>
 
 <center><table id="listings_table">
 </table>
@@ -40,8 +46,3 @@
     <!-- Copyright -->
 
   </footer>
-
-
-<script src="/src/property.js"></script>
-<script src="/node_modules/jquery/dist/jquery.js"></script>
-<script src="/src/properties_interface.js"></script>
