--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,7 @@
     </div>
   </nav>
   <center><div>
-<h2 class="fontAv">Welcome to Cambri.... We mean Makers B'n'B</h2>
+<h2 class="fontAv">Welcome to Makers B'n'B</h2>
 <br>
 <br>
 <form action="/user/login/" method="get" >
